--- a/src/RuhRoh.Tests/RuhRoh.Tests.csproj
+++ b/src/RuhRoh.Tests/RuhRoh.Tests.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RuhRoh.Core\RuhRoh.Core.csproj" />
+    <ProjectReference Include="..\RuhRoh\RuhRoh.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
