Added XML documentation and moved some abstractions

--- a/src/RuhRoh/RuhRoh.csproj
+++ b/src/RuhRoh/RuhRoh.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Castle.Core" Version="4.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RuhRoh.Abstractions\RuhRoh.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
