--- a/src/RuhRoh/RuhRoh.csproj
+++ b/src/RuhRoh/RuhRoh.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="Castle.Core" Version="4.2.1" />
+    <PackageReference Include="System.Reflection" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
