Added model/service/dbcontext, context still needs configuration

--- a/src/Samples/ASP.NET Core Web API/ASP.NET Core Web API.csproj
+++ b/src/Samples/ASP.NET Core Web API/ASP.NET Core Web API.csproj
@@ -2,18 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>RuhRoh.Samples.WebAPI</AssemblyName>
+    <RootNamespace>RuhRoh.Samples.WebAPI</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\RuhRoh\RuhRoh.csproj" />
   </ItemGroup>
 
 </Project>
