--- a/src/Samples/ASP.NET Core Web API/appsettings.json
+++ b/src/Samples/ASP.NET Core Web API/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "TodoDb": "Server=(localdb)\\MSSQLLocalDB;Database=RuhRoh_Todo;Trusted_Connection=True;MultipleActiveResultSets=true" 
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
