--- a/src/Samples/ASP.NET Core Web API/appsettings.json
+++ b/src/Samples/ASP.NET Core Web API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "TodoDb": "Server=(localdb)\\MSSQLLocalDB;Database=RuhRoh_Todo;Trusted_Connection=True;MultipleActiveResultSets=true" 
+    "TodoDb": "Server=.\\SQLEXPRESS;Database=RuhRoh_Todo;Trusted_Connection=True;MultipleActiveResultSets=true" 
   },
   "Logging": {
     "IncludeScopes": false,
