--- a/src/Samples/ASP.NET Core Web API/ASP.NET Core Web API.csproj
+++ b/src/Samples/ASP.NET Core Web API/ASP.NET Core Web API.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.*" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
