--- a/src/Samples/ASP.NET Core Web API/Properties/launchSettings.json
+++ b/src/Samples/ASP.NET Core Web API/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "todoitems",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "ASP.NET_Core_Web_API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "todoitems",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
